# dbt-coverage

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: dbtcov.yml
docs/: HLD.md  LLD.md
docs/specs/: SPEC-01-core-domain-model.md  SPEC-02-config-and-project-discovery.md  SPEC-03-source-scanner.md  SPEC-05-jinja-renderer.md  SPEC-06-sql-parser.md  SPEC-07-rule-engine.md  SPEC-08a-rules-q001-q002.md  SPEC-09a-coverage-test-doc.md  SPEC-10a-reporters-sarif-json-console.md  SPEC-11-quality-gate.md  SPEC-12-cli.md  SPEC-13-test-harness-sample-project.md  SPEC-16a-rule-r001-duplicate-models.md  SPEC-17a-rule-p001-cross-join.md  SPEC-18-analysis-graph.md  SPEC-19-sql-cyclomatic-complexity.md  SPEC-20-rule-q003-high-complexity.md  SPEC-21-adapter-framework.md  SPEC-22-weighted-test-coverage.md  SPEC-23-adapter-dbt-test.md  SPEC-24-adapter-sqlfluff.md  SPEC-25-compiled-render-mode.md  SPEC-26-refactor-rules-pack.md  SPEC-27-architecture-rules-pack.md  SPEC-28-performance-rules-pack.md  SPEC-29-quality-rules-pack.md  SPEC-30-security-governance-pack.md  SPEC-31-waivers-and-baseline.md  SPEC-32-test-kinds-and-execution.md  SPEC-33-check-skip-tracking.md
k8s/: deployment.yaml  ingress.yaml  service.yaml
scripts/: onboard.sh
src/dbt_coverage/: __init__.py
src/dbt_coverage/adapters/: __init__.py  base.py  dedup.py  errors.py  scheduler.py
src/dbt_coverage/analyzers/: __init__.py  duplicates.py  normalization.py  rule_base.py  rule_engine.py  rule_registry.py  waivers.py
src/dbt_coverage/cli/: __init__.py  main.py  orchestrator.py
src/dbt_coverage/complexity/: __init__.py  jinja_complexity.py  sql_complexity.py
src/dbt_coverage/core/: __init__.py  adapter_types.py  complexity.py  enums.py  exceptions.py  fingerprint.py  models.py  (+2 more)
src/dbt_coverage_ui/: __init__.py  app.py  db.py  metadata.py  scanner.py
tests/: conftest.py
tests/integration/: test_cli_smoke.py  test_compiled_mode.py  test_sample_project_scan.py  test_scan_with_artifacts.py  test_waivers_e2e.py
tests/unit/: test_adapter_dbt_test.py  test_adapter_sqlfluff.py  test_complexity.py  test_core_models.py  test_coverage.py  test_new_coverage_dims.py  test_quality_gate.py  test_quality_score.py  test_quality_score_scenarios.py  test_reporters.py  test_rule_q003.py  test_rules_testing_pack.py  test_test_classifier.py
(+133 files in other folders)
